; ModuleID = '/home/carl/AnghaBench/git/extr_editor.c_git_sequence_editor.c'
source_filename = "/home/carl/AnghaBench/git/extr_editor.c_git_sequence_editor.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [20 x i8] c"GIT_SEQUENCE_EDITOR\00", align 1
@.str.1 = private unnamed_addr constant [16 x i8] c"sequence.editor\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @git_sequence_editor() #0 {
  %1 = alloca i8*, align 8
  %2 = call i8* @getenv(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  store i8* %2, i8** %1, align 8
  %3 = load i8*, i8** %1, align 8
  %4 = icmp ne i8* %3, null
  br i1 %4, label %7, label %5

5:                                                ; preds = %0
  %6 = call i32 @git_config_get_string_const(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.1, i64 0, i64 0), i8** %1)
  br label %7

7:                                                ; preds = %5, %0
  %8 = load i8*, i8** %1, align 8
  %9 = icmp ne i8* %8, null
  br i1 %9, label %12, label %10

10:                                               ; preds = %7
  %11 = call i8* (...) @git_editor()
  store i8* %11, i8** %1, align 8
  br label %12

12:                                               ; preds = %10, %7
  %13 = load i8*, i8** %1, align 8
  ret i8* %13
}

declare dso_local i8* @getenv(i8*) #1

declare dso_local i32 @git_config_get_string_const(i8*, i8**) #1

declare dso_local i8* @git_editor(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
